--- a/portfolio/pormoku.css
+++ b/portfolio/pormoku.css
@@ -13,6 +13,10 @@ h1:lang(ko){
   font-family: "Jeju Gothic", sans-serif;
 }
 
+div:lang(ko){
+  font-family: "Jeju Gothic", sans-serif;
+}
+
 h2{
   font-family: 'Raleway', sans-serif;
   font-weight: 200;
