--- a/portfolio/works.css
+++ b/portfolio/works.css
@@ -1,76 +1,66 @@
+/*For Mobile*/
+
 body {
   background-color: #555555;
   font-family: 'Raleway', sans-serif;
   text-align: center;
-
+  font-size: 0.6em;
 }
-
-h1{
+h1 {
   font-family: 'Ubuntu', sans-serif;
 }
-
-h1:lang(ko){
+h1:lang(ko) {
   font-family: "Jeju Gothic", sans-serif;
 }
-
-h2{
+h2 {
   font-family: 'Raleway', sans-serif;
   font-weight: 200;
   font-size: 1.4em;
 }
-
 ul {
-    list-style-type: none;
-    margin: auto;
-    padding: 0;
-    overflow: hidden;
+  list-style-type: none;
+  margin: auto;
+  padding: 0;
+  overflow: hidden;
 }
-
-li.tab{
-    display:inline-block;
-    padding:1em;
+li.tab {
+  display: inline-block;
+  padding: 1em;
 }
-
 li.tab a {
-  font-size: 1.5em;
+  font-size: 1.8em;
   color: black;
   font-family: 'Ubuntu', sans-serif;
   text-align: center;
   padding: 1em;
   text-decoration: none;
 }
-
-#works{
+#works {
   text-decoration: underline;
 }
-
-ul{
+ul {
   text-align: center;
 }
-
-#mainlogo{
+#mainlogo {
   display: block;
   height: 40vh;
   margin: auto;
   z-index: -2;
 }
-
-#tomain{
+#tomain {
   z-index: -2;
 }
-
-#logo{
+#logo {
+  display:none;
   position: absolute;
-  left:0;
-  top:0;
+  left: 0;
+  top: 0;
   padding: 1.8em 2em;
   height: 2.2em;
 }
-
-.tab:hover{
+.tab:hover {
   text-decoration: none;
 }
-
 nav.abs-nav {
   position: fixed;
   left: 0px;
@@ -80,9 +70,8 @@ nav.abs-nav {
   background-color: white;
   z-index: 1;
 }
-
-nav.abs-nav-under{
-  position:fixed;
+nav.abs-nav-under {
+  position: fixed;
   left: 0px;
   width: 100%;
   height: 0.5em;
@@ -90,64 +79,54 @@ nav.abs-nav-under{
   background-color: black;
   z-index: 2;
 }
-
-.icon{
-  width:3em;
-  padding:0.5em;
+.icon {
+  width: 3em;
+  padding: 0.5em;
   z-index: -2;
 }
-
-#iconbar{
-  position: absolute;
-  right: 1em;
-  top: 1em;
+#iconbar {
+  display: none;
 }
-
-#topblank{
+#topblank {
   height: 7em;
 }
-
-.page-wrapper{
-  width:68em;
+.page-wrapper {
+  width:95vw;
+  margin-top:1em;
   margin: auto;
   background-color: rgba(255, 255, 255, 0.4);
-  padding: 1em;
+  padding: 0;
   text-align: left;
 }
-
-.work-thumbnail{
-  display:inline-block;
-  width:20em;
-  height:11.25em;
-  margin:1.23em;
+.work-thumbnail {
+  display: inline-block;
+  width: 43vw;
+  height: 24.1875vw;
+  margin: 2.25vw;
   position: relative;
 }
-
-.work-thumbnail img{
-  width:20em;
-  height:11.25em;
+.work-thumbnail img {
+  width: 43vw;
+  height: 24.1875vw;
 }
-
-.work-thumbnail a{
+.work-thumbnail a {
   z-index: -2;
 }
 .work-thumbnail:hover .overlay {
   opacity: 1;
 }
-
 .overlay {
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  height: 11.25em;
-  width: 20em;
+  height: 24.1875vw;
+  width: 43vw;
   opacity: 0;
   transition: .5s ease;
-  background-color: rgba(255,255,255,0.7);
+  background-color: rgba(255, 255, 255, 0.7);
 }
-
 .text {
   color: black;
   font-family: "Ubuntu", sans-serif;
@@ -159,8 +138,299 @@ nav.abs-nav-under{
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
 }
-
-#profile{
-  width:30em;
+#profile {
+  width: 30em;
   margin: 1.5em;
+}
+a{
+  color: black;
+}
+@media screen and (min-width:415px) { /* for Tablet*/
+  body {
+    background-color: #555555;
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+  }
+  h1 {
+    font-family: 'Ubuntu', sans-serif;
+  }
+  h1:lang(ko) {
+    font-family: "Jeju Gothic", sans-serif;
+  }
+  h2 {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 200;
+    font-size: 1.4em;
+  }
+  ul {
+    list-style-type: none;
+    margin: auto;
+    padding: 0;
+    overflow: hidden;
+  }
+  li.tab {
+    display: inline-block;
+    padding: 1em;
+  }
+  li.tab a {
+    font-size: 1.5em;
+    color: black;
+    font-family: 'Ubuntu', sans-serif;
+    text-align: center;
+    padding: 1em;
+    text-decoration: none;
+  }
+  #works {
+    text-decoration: underline;
+  }
+  ul {
+    text-align: center;
+  }
+  #mainlogo {
+    display: block;
+    height: 40vh;
+    margin: auto;
+    z-index: -2;
+  }
+  #tomain {
+    z-index: -2;
+  }
+  #logo {
+    display:block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    padding: 1.8em 2em;
+    height: 2.2em;
+  }
+  .tab:hover {
+    text-decoration: none;
+  }
+  nav.abs-nav {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 6em;
+    background-color: white;
+    z-index: 1;
+  }
+  nav.abs-nav-under {
+    position: fixed;
+    left: 0px;
+    width: 100%;
+    height: 0.5em;
+    top: 6em;
+    background-color: black;
+    z-index: 2;
+  }
+  .icon {
+    width: 3em;
+    padding: 0.5em;
+    z-index: -2;
+  }
+  #iconbar {
+    display: none;
+  }
+  #topblank {
+    height: 7em;
+  }
+  .page-wrapper {
+    width:95vw;
+    margin-top:1em;
+    margin: auto;
+    background-color: rgba(255, 255, 255, 0.4);
+    padding: 0;
+    text-align: left;
+  }
+  .work-thumbnail {
+    display: inline-block;
+    width: 43vw;
+    height: 24.1875vw;
+    margin: 2.25vw;
+    position: relative;
+  }
+  .work-thumbnail img {
+    width: 43vw;
+    height: 24.1875vw;
+  }
+  .work-thumbnail a {
+    z-index: -2;
+  }
+  .work-thumbnail:hover .overlay {
+    opacity: 1;
+  }
+  .overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 24.1875vw;
+    width: 43vw;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: rgba(255, 255, 255, 0.7);
+  }
+  .text {
+    color: black;
+    font-family: "Ubuntu", sans-serif;
+    font-size: 20px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+  }
+  #profile {
+    width: 30em;
+    margin: 1.5em;
+  }
+}
+@media screen and (min-width:1025px) {
+  /* for PC*/
+  body {
+    background-color: #555555;
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+  }
+  h1 {
+    font-family: 'Ubuntu', sans-serif;
+  }
+  h1:lang(ko) {
+    font-family: "Jeju Gothic", sans-serif;
+  }
+  h2 {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 200;
+    font-size: 1.4em;
+  }
+  ul {
+    list-style-type: none;
+    margin: auto;
+    padding: 0;
+    overflow: hidden;
+  }
+  li.tab {
+    display: inline-block;
+    padding: 1em;
+  }
+  li.tab a {
+    font-size: 1.5em;
+    color: black;
+    font-family: 'Ubuntu', sans-serif;
+    text-align: center;
+    padding: 1em;
+    text-decoration: none;
+  }
+  #works {
+    text-decoration: underline;
+  }
+  ul {
+    text-align: center;
+  }
+  #mainlogo {
+    display: block;
+    height: 40vh;
+    margin: auto;
+    z-index: -2;
+  }
+  #tomain {
+    z-index: -2;
+  }
+  #logo {
+    position: absolute;
+    left: 0;
+    top: 0;
+    padding: 1.8em 2em;
+    height: 2.2em;
+  }
+  .tab:hover {
+    text-decoration: none;
+  }
+  nav.abs-nav {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 6em;
+    background-color: white;
+    z-index: 1;
+  }
+  nav.abs-nav-under {
+    position: fixed;
+    left: 0px;
+    width: 100%;
+    height: 0.5em;
+    top: 6em;
+    background-color: black;
+    z-index: 2;
+  }
+  .icon {
+    width: 3em;
+    padding: 0.5em;
+    z-index: -2;
+  }
+  #iconbar {
+    display: block;
+    position: absolute;
+    right: 1em;
+    top: 1em;
+  }
+  #topblank {
+    height: 7em;
+  }
+  .page-wrapper {
+    width: 68em;
+    margin: auto;
+    background-color: rgba(255, 255, 255, 0.4);
+    margin-top:1em;
+    padding: 1em;
+    text-align: left;
+  }
+  .work-thumbnail {
+    display: inline-block;
+    width: 20em;
+    height: 11.25em;
+    margin: 1.23em;
+    position: relative;
+  }
+  .work-thumbnail img {
+    width: 20em;
+    height: 11.25em;
+  }
+  .work-thumbnail a {
+    z-index: -2;
+  }
+  .work-thumbnail:hover .overlay {
+    opacity: 1;
+  }
+  .overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 11.25em;
+    width: 20em;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: rgba(255, 255, 255, 0.7);
+  }
+  .text {
+    color: black;
+    font-family: "Ubuntu", sans-serif;
+    font-size: 20px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+  }
+  #profile {
+    width: 30em;
+    margin: 1.5em;
+  }
 }
