--- a/portfolio/pormoku.css
+++ b/portfolio/pormoku.css
@@ -133,7 +133,7 @@
   .text {
     color: black;
     font-family: "Ubuntu", sans-serif;
-    font-size: 20px;
+    font-size: 1em;
     text-align: center;
     position: absolute;
     top: 50%;
@@ -155,6 +155,9 @@
   }
   a{
     color: black;
+  }
+  #description{
+    line-height: 1.5em;
   }
 @media screen and (min-width:415px) {  /* for Tablet*/
   body {
