--- a/works.css
+++ b/works.css
@@ -1,165 +1,151 @@
-/* for Mobile*/
-  body {
-    background-color: #555555;
-    font-family: 'Raleway', sans-serif;
-    text-align: center;
-    font-size: 0.6em;
-  }
-  h1 {
-    font-family: 'Ubuntu', sans-serif;
-  }
-  h1:lang(ko) {
-    font-family: "Jeju Gothic", sans-serif;
-  }
-  div:lang(ko) {
-    font-family: "Jeju Gothic", sans-serif;
-    font-weight: 100;
-  }
-  h2 {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 200;
-    font-size: 1.4em;
-  }
-  ul {
-    list-style-type: none;
-    margin: auto;
-    padding: 0;
-    overflow: hidden;
-  }
-  li.tab {
-    display: inline-block;
-    padding: 1em;
-  }
-  li.tab a {
-    font-size: 1.8em;
-    color: black;
-    font-family: 'Ubuntu', sans-serif;
-    text-align: center;
-    padding: 1em;
-    text-decoration: none;
-  }
-  #works {
-    text-decoration: underline;
-  }
-  ul {
-    text-align: center;
-  }
-  #mainlogo {
-    display: block;
-    height: 40vh;
-    margin: auto;
-    z-index: -2;
-  }
-  #tomain {
-    z-index: -2;
-  }
-  #logo {
-    display:none;
-    position: absolute;
-    left: 0;
-    top: 0;
-    padding: 1.8em 2em;
-    height: 2.2em;
-  }
-  .tab:hover {
-    text-decoration: none;
-  }
-  nav.abs-nav {
-    position: fixed;
-    left: 0px;
-    top: 0px;
-    width: 100%;
-    height: 6em;
-    background-color: white;
-    z-index: 1;
-  }
-  nav.abs-nav-under {
-    position: fixed;
-    left: 0px;
-    width: 100%;
-    height: 0.5em;
-    top: 6em;
-    background-color: black;
-    z-index: 2;
-  }
-  .icon {
-    width: 3em;
-    padding: 0.5em;
-    z-index: -2;
-  }
-  #iconbar {
-    display: none;
-  }
-  #topblank {
-    height: 7em;
-  }
-  .page-wrapper {
-    width:95%;
-    margin-top:1em;
-    margin: auto;
-    background-color: rgba(255, 255, 255, 0.4);
-    padding: 1em;
-    text-align: left;
-  }
-  .work-thumbnail {
-    display: inline-block;
-    width: 20em;
-    height: 11.25em;
-    margin: 1.23em;
-    position: relative;
-  }
-  .work-thumbnail img {
-    width: 20em;
-    height: 11.25em;
-  }
-  .work-thumbnail a {
-    z-index: -2;
-  }
-  .work-thumbnail:hover .overlay {
-    opacity: 1;
-  }
-  .overlay {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 11.25em;
-    width: 20em;
-    opacity: 0;
-    transition: .5s ease;
-    background-color: rgba(255, 255, 255, 0.7);
-  }
-  .text {
-    color: black;
-    font-family: "Ubuntu", sans-serif;
-    font-size: 1em;
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-  }
-  #profile {
-    width: 30em;
-    margin: 1.5em;
-  }
-  a {
-    color: black;
-  }
-  #video {
-    display: block;
-    width: 92vw;
-    height: 51.75vw;
-  }
-  a{
-    color: black;
-  }
-  #description{
-    line-height: 1.5em;
-  }
-@media screen and (min-width:415px) {  /* for Tablet*/
+/*For Mobile*/
+
+body {
+  background-color: #555555;
+  font-family: 'Raleway', sans-serif;
+  text-align: center;
+  font-size: 0.6em;
+}
+h1 {
+  font-family: 'Ubuntu', sans-serif;
+}
+h1:lang(ko) {
+  font-family: "Jeju Gothic", sans-serif;
+}
+h2 {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 200;
+  font-size: 1.4em;
+}
+ul {
+  list-style-type: none;
+  margin: auto;
+  padding: 0;
+  overflow: hidden;
+}
+li.tab {
+  display: inline-block;
+  padding: 1em;
+}
+li.tab a {
+  font-size: 1.8em;
+  color: black;
+  font-family: 'Ubuntu', sans-serif;
+  text-align: center;
+  padding: 1em;
+  text-decoration: none;
+}
+#works {
+  text-decoration: underline;
+}
+ul {
+  text-align: center;
+}
+#mainlogo {
+  display: block;
+  height: 40vh;
+  margin: auto;
+  z-index: -2;
+}
+#tomain {
+  z-index: -2;
+}
+#logo {
+  display:none;
+  position: absolute;
+  left: 0;
+  top: 0;
+  padding: 1.8em 2em;
+  height: 2.2em;
+}
+.tab:hover {
+  text-decoration: none;
+}
+nav.abs-nav {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 6em;
+  background-color: white;
+  z-index: 1;
+}
+nav.abs-nav-under {
+  position: fixed;
+  left: 0px;
+  width: 100%;
+  height: 0.5em;
+  top: 6em;
+  background-color: black;
+  z-index: 2;
+}
+.icon {
+  width: 3em;
+  padding: 0.5em;
+  z-index: -2;
+}
+#iconbar {
+  display: none;
+}
+#topblank {
+  height: 7em;
+}
+.page-wrapper {
+  width:95vw;
+  margin-top:1em;
+  margin: auto;
+  background-color: rgba(255, 255, 255, 0.4);
+  padding: 0;
+  text-align: left;
+}
+.work-thumbnail {
+  display: inline-block;
+  width: 43vw;
+  height: 24.1875vw;
+  margin: 2.25vw;
+  position: relative;
+}
+.work-thumbnail img {
+  width: 43vw;
+  height: 24.1875vw;
+}
+.work-thumbnail a {
+  z-index: 0;
+}
+.work-thumbnail:hover .overlay {
+  opacity: 1;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 24.1875vw;
+  width: 43vw;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+.text {
+  color: black;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 1em;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+#profile {
+  width: 30em;
+  margin: 1.5em;
+}
+a{
+  color: black;
+}
+@media screen and (min-width:415px) { /* for Tablet*/
   body {
     background-color: #555555;
     font-family: 'Raleway', sans-serif;
@@ -169,9 +155,6 @@
     font-family: 'Ubuntu', sans-serif;
   }
   h1:lang(ko) {
-    font-family: "Jeju Gothic", sans-serif;
-  }
-  div:lang(ko) {
     font-family: "Jeju Gothic", sans-serif;
   }
   h2 {
@@ -253,23 +236,23 @@
     height: 7em;
   }
   .page-wrapper {
-    width:95%;
+    width:95vw;
     margin-top:1em;
     margin: auto;
     background-color: rgba(255, 255, 255, 0.4);
-    padding: 1em;
+    padding: 0;
     text-align: left;
   }
   .work-thumbnail {
     display: inline-block;
-    width: 20em;
-    height: 11.25em;
-    margin: 1.23em;
+    width: 43vw;
+    height: 24.1875vw;
+    margin: 2.25vw;
     position: relative;
   }
   .work-thumbnail img {
-    width: 20em;
-    height: 11.25em;
+    width: 43vw;
+    height: 24.1875vw;
   }
   .work-thumbnail a {
     z-index: -2;
@@ -283,8 +266,8 @@
     bottom: 0;
     left: 0;
     right: 0;
-    height: 11.25em;
-    width: 20em;
+    height: 24.1875vw;
+    width: 43vw;
     opacity: 0;
     transition: .5s ease;
     background-color: rgba(255, 255, 255, 0.7);
@@ -292,7 +275,7 @@
   .text {
     color: black;
     font-family: "Ubuntu", sans-serif;
-    font-size: 20px;
+    font-size: 15px;
     text-align: center;
     position: absolute;
     top: 50%;
@@ -304,16 +287,7 @@
     width: 30em;
     margin: 1.5em;
   }
-  a {
-    color: black;
-  }
-  #video {
-    display: block;
-    width: 92vw;
-    height: 51.75vw;
-  }
 }
-
 @media screen and (min-width:1025px) {  /* for PC*/
   body {
     background-color: #555555;
@@ -324,9 +298,6 @@
     font-family: 'Ubuntu', sans-serif;
   }
   h1:lang(ko) {
-    font-family: "Jeju Gothic", sans-serif;
-  }
-  div:lang(ko) {
     font-family: "Jeju Gothic", sans-serif;
   }
   h2 {
@@ -449,7 +420,7 @@
   .text {
     color: black;
     font-family: "Ubuntu", sans-serif;
-    font-size: 20px;
+    font-size: 15px;
     text-align: center;
     position: absolute;
     top: 50%;
@@ -460,13 +431,5 @@
   #profile {
     width: 30em;
     margin: 1.5em;
-  }
-  a {
-    color: black;
-  }
-  #video {
-    display: block;
-    width: 68em;
-    height: 38.25em;
   }
 }
