--- a/works/pormoku.css
+++ b/works/pormoku.css
@@ -9,13 +9,16 @@
     font-family: 'Ubuntu', sans-serif;
   }
   h1:lang(ko) {
-    font-family: "Jeju Gothic", sans-serif;
   }
   div:lang(ko) {
-    font-family: "Jeju Gothic", sans-serif;
     font-weight: 100;
   }
   h2 {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 200;
+    font-size: 1.4em;
+  }
+  h3{
     font-family: 'Raleway', sans-serif;
     font-weight: 200;
     font-size: 1.4em;
@@ -170,10 +173,8 @@
     font-size: 3em;
   }
   h1:lang(ko) {
-    font-family: "Jeju Gothic", sans-serif;
   }
   div:lang(ko) {
-    font-family: "Jeju Gothic", sans-serif;
   }
   h2 {
     font-family: 'Raleway', sans-serif;
@@ -181,6 +182,8 @@
     font-size: 2em;
   }
   h3{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 200;
     font-size: 1.4em;
   }
   ul {
@@ -333,10 +336,8 @@
     font-size: 3em;
   }
   h1:lang(ko) {
-    font-family: "Jeju Gothic", sans-serif;
   }
   div:lang(ko) {
-    font-family: "Jeju Gothic", sans-serif;
   }
   h2 {
     font-family: 'Raleway', sans-serif;
@@ -344,6 +345,8 @@
     font-size: 2em;
   }
   h3{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 200;
     font-size: 1.4em;
   }
   ul {
