--- a/works.css
+++ b/works.css
@@ -115,6 +115,9 @@ nav.abs-nav-under {
 .work-thumbnail:hover .overlay {
   opacity: 1;
 }
+.work-thumbnail:active .overlay {
+  opacity: 1;
+}
 .overlay {
   position: absolute;
   top: 0;
