--- a/works.css
+++ b/works.css
@@ -112,12 +112,10 @@ nav.abs-nav-under {
 .work-thumbnail a {
   z-index: 0;
 }
-.work-thumbnail:hover .overlay {
+.work-thumbnail:hover .overlay, .work-thumbnail .overlay:hover {
   opacity: 1;
 }
-.work-thumbnail:active .overlay {
-  opacity: 1;
-}
+
 .overlay {
   position: absolute;
   top: 0;
