--- a/works.css
+++ b/works.css
@@ -5,6 +5,7 @@ body {
   font-family: 'Raleway', sans-serif;
   text-align: center;
   font-size: 0.6em;
+  cursor: pointer;
 }
 h1 {
   font-family: 'Ubuntu', sans-serif;
@@ -110,7 +111,7 @@ nav.abs-nav-under {
   height: 24.1875vw;
 }
 .work-thumbnail a {
-  z-index: 1;
+  z-index: 0;
 }
 .work-thumbnail:hover .overlay, .work-thumbnail .overlay:hover {
   opacity: 1;
