--- a/works.css
+++ b/works.css
@@ -115,7 +115,7 @@ nav.abs-nav-under {
 .work-thumbnail:hover .overlay, .work-thumbnail .overlay:hover {
   opacity: 1;
 }
-.work-thumbnail:active .overlay, .work-thumbnail .overlay:active {
+.work-thumbnail:focus .overlay, .work-thumbnail .overlay:focus {
   opacity: 1;
 }
 
